sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: '(' expected but identifier found.
		for j<-0 to i){
                    ^AlgBubbleSort2:14: error: illegal start of simple expression
	}
        ^