sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var x=1
var nb = getNombreValeurs()-2

while (x!=0){
	for( i<-nb to 0 by -1){
		for j<-0 to i){
			if (getValeur(j+1)<getValeur(j){
				echange(j+1,j)
				x=x+1
			}
		}
	}
}

}
